frontend:fix: fix 404 page image overflow

--- a/frontend/src/components/NotFound/NotFound.css
+++ b/frontend/src/components/NotFound/NotFound.css
@@ -3,5 +3,9 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  position: relative;
+  position: fixed;
+}
+
+.notFound__img {
+  object-fit: contain;
 }
